[package]
name = "gg_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
tokio-retry = "0.3"
maelstrom-node="0.1.6"

[[bin]]
name = "echo"

[[bin]]
name = "unique_ids"

[[bin]]
name = "broadcast"

[[bin]]
name = "broadcast_eff"

[[bin]]
name = "counter"
